@@ -10,6 +10,7 @@ lintian-brush (0.45) UNRELEASED; urgency=medium
     stanzas. Closes: #946338
   * Don't update changelog if there are only gbp-dch entries in the
     current changelog entry. Closes: #946339
+  * Fixup outdated freedesktop.org repository URLs.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Thu, 05 Dec 2019 22:21:34 +0000
 
